# Social_Robot_Nav

./: CMakeLists.txt  README.md  deneme.rviz  package.xml
config/: base_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  leg_detection_params.yaml  local_costmap_params.yaml
launch/: amcl.launch  gmapping.launch  leg_detection.launch  map_with_people.launch  map_with_people_and_turtlebot.launch  master.launch  master_gazebo.launch  master_navigation.launch  master_slam.launch  move_base.launch
maps/: map.yaml  map1.pgm  map1.yaml  map2.pgm  maps.yaml  test.yaml
rviz/: rviz_navigation.rviz  rviz_slam.rviz
src/bot_move/: turtlebot3_move.py
src/bot_sensor_info/: turtlebot3_sensor_info.py
src/human_comfort_index/: social_individual_index.py
src/people_publisher/: peoplePublisher.py  peoplePublisher_backup.py  personPublisher.py
worlds/: simple_office_with_people.world
